<resources>
    <string name="app_name">Campus Connect</string>
    <string name="app_dis">Connect, Share, Grow </string>
    <string name="Get_started">Get Started</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="student_gmail">student@gmail.com</string>






</resources>